# GLplay

./: CMakeLists.txt  compat.cpp  constants.hpp  core.cpp  glut-compat.cpp
glad-compat/include/glad/: glad.h
glad-compat/src/: glad.c
glad-core/include/glad/: glad.h
glad-core/src/: glad.c
